--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport"
         content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Light Show</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap">
 </head>
 
 <body>
@@ -472,7 +471,7 @@
         user-select: none;
         height: 100vh;
         margin: 0;
-        buttonding: 0;
+        padding: 0;
         font-family: sans-serif;
         font-size: 0;
         color: hsl(0, 0%, 80%);
@@ -561,7 +560,7 @@
         right: 0;
         width: 69.5vw;
         height: calc(100% - 0.5vw);
-        buttonding: 0.25vw;
+        padding: 0.25vw;
         overflow: hidden;
         transition: transform 150ms, opacity 150ms linear, visibility 150ms linear;
     }
