--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             this.length = showsConfig[this.show].length;
             this.bpm = showsConfig[this.show].bpm;
 
-            this.querySelector(".button-name").textContent = this.button;
+            this.querySelector(".button-name").textContent = this.show;
             this.querySelector(".button-length").textContent = this.length;
             this.querySelector(".button-button").textContent = this.trigger;
             if(showsConfig[this.show].loop){
